@@ -1,5 +1,15 @@
 2009-04-23  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/xmlrpc.h
+	* src/xmlrpc.c (+recommend_track):
+	Bring back recommend_track(), at least while the v2.0 API doesn't
+	have an album.share method.
+
+	* src/lastfm-ws.c (lastfm_ws_share_track):
+	Use the old API to share (recommend) albums.
+
+2009-04-23  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/lastfm-ws.c
 	(lastfm_ws_session_new, lastfm_ws_session_unref)
 	(lastfm_ws_get_session_from_token, lastfm_ws_get_session):
